# zerosu

./: CImports.zig  CMakeLists.txt  CurveApproximator.zig  Input.zig  MathUtils.zig  Profiler.zig  README.md  Sound.zig  build.zig  build.zig.zon  main.zig
Drawables/: DrawableManager.zig  Player.zig
Easy2D/: Easy2D.zig  GLBuffer.zig  Graphics.zig  PrimitiveBatcher.zig  Shader.zig  Texture.zig  Viewport.zig
Osu/: OsuParser.zig  PlayableBeatmap.zig  ReplayParser.zig  Skin.zig
Osu/Drawables/: DrawableHitCircle.zig  DrawableHitSlider.zig  _drawable_template.zig
Scenes/: MenuScene.zig  PlayScene.zig  SceneManager.zig  TestScene.zig
include/imgui/: imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
include/osu!parser/Parser/: Beatmap.hpp  Utilities.hpp
include/osu!parser/Parser/Structures/Beatmap/: HitObject.hpp
include/osu!parser/Parser/Structures/Beatmap/Sections/: Section.hpp
maps/centipede/: map.osu
maps/fukutuidol/: map.osu
maps/shakedown/: map.osu
shaders/: fragment.glsl  main.frag  main.vert  slider.frag  slider.vert  vertex.glsl
skins/default/: skin.ini
src/: Drawable.cpp  Drawable.h  main.cpp
src/Easy2D/: GLBuffer.cpp  GLObject.cpp  Graphics.cpp  Log.cpp  PrimitiveBatcher.cpp  PrimitiveBuilder.cpp  Shader.cpp  Texture.cpp  Texture.h  Utils.h  Viewport.cpp  Viewport.h
src/Osu/: OsuSkin.cpp  OsuSkin.h
src/Osu/Objects/: CurveApproximator.h  DrawableHitCircle.cpp  DrawableHitCircle.h  DrawableHitSlider.cpp  DrawableHitSlider.h  Path.h
src/Osu/Skins/default/: skin.ini
src/Scenes/: MenuScene.cpp  MenuScene.h  PlayScene.cpp  PlayScene.h  Scene.h  SceneManager.cpp  SceneManager.h  TestScene.cpp  TestScene.h
